--- a/CharacterBook/CharacterBook.csproj
+++ b/CharacterBook/CharacterBook.csproj
@@ -51,6 +51,8 @@
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
 		<MauiImage Update="Resources\Images\dotnet_bot.png" Resize="True" BaseSize="300,185" />
+		<MauiImage Update="Resources\Images\character_icon.png" Resize="True" BaseSize="24,24" />
+		<MauiImage Update="Resources\Images\note_icon.png" Resize="True" BaseSize="24,24" />
 
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
