--- a/CharacterBook.Flutter/characterbook/pubspec.yaml
+++ b/CharacterBook.Flutter/characterbook/pubspec.yaml
@@ -9,6 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.19.0
   cupertino_icons: ^1.0.8
   hive: ^2.2.3
   hive_flutter: ^1.1.0
@@ -20,8 +23,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  intl_utils: ^2.8.6
   flutter_lints: ^5.0.0
-  hive_generator: ^1.1.3
+  hive_generator: ^2.0.1
   build_runner: ^2.2.0
 
 flutter:
