--- a/characterbook/pubspec.yaml
+++ b/characterbook/pubspec.yaml
@@ -26,6 +26,14 @@ dev_dependencies:
   intl_utils: ^2.8.6
   hive_generator: ^2.0.1
   build_runner: ^2.2.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/icon.png
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/icon.png"
