--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: characterbook
 description: "Implementation of the Character Book app on the Flutter framework"
 publish_to: 'MaxGog'
-version: 1.3.0
+version: 1.4.0
 
 environment:
   sdk: ^3.7.2
@@ -23,12 +23,14 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.0
   intl_utils: ^2.8.6
   hive_generator: ^2.0.1
-  build_runner: ^2.2.0
   flutter_launcher_icons: ^0.13.1
+  flutter_gen_runner: ^5.10.0
 
 flutter:
+  generate: true
   uses-material-design: true
   assets:
     - assets/icon.png
