--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   image_picker: ^1.1.2
   open_file: ^3.3.1
   docx_template: ^0.4.0
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
@@ -34,6 +35,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/icon.png
+    - assets/underdeveloped.png
 
 flutter_launcher_icons:
   android: true
