--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  provider: ^6.0.5
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.0.11
