--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,11 +15,15 @@ dependencies:
   provider: ^6.0.5
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  path_provider: ^2.0.11
+  path_provider: ^2.1.1
   image_picker: ^1.1.2
   open_file: ^3.3.1
   docx_template: ^0.4.0
   url_launcher: ^6.1.11
+  json_annotation: ^4.8.1
+  google_sign_in: ^6.1.5
+  googleapis: ^11.4.0
+  extension_google_sign_in_as_googleapis_auth: ^2.0.3
 
 dev_dependencies:
   flutter_test:
@@ -30,6 +34,7 @@ dev_dependencies:
   hive_generator: ^2.0.1
   flutter_launcher_icons: ^0.13.1
   flutter_gen_runner: ^5.10.0
+  json_serializable: ^6.7.1
 
 flutter:
   generate: true
