--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,10 @@ dependencies:
   google_sign_in: ^6.1.5
   googleapis: ^11.4.0
   extension_google_sign_in_as_googleapis_auth: ^2.0.3
+  qr_flutter: ^4.1.0
+  mobile_scanner: ^3.1.0
+  flutter_bloc: ^8.1.3
+  crypto: ^3.0.3
 
 dev_dependencies:
   flutter_test:
