--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: characterbook
 description: "Implementation of the Character Book app on the Flutter framework"
 publish_to: 'MaxGog'
-version: 1.4.0
+version: 1.5.2+10
 
 environment:
   sdk: ^3.7.2
@@ -28,6 +28,7 @@ dependencies:
   mobile_scanner: ^3.1.0
   flutter_bloc: ^8.1.3
   crypto: ^3.0.3
+  package_info_plus: ^8.3.0
 
 dev_dependencies:
   flutter_test:
@@ -44,11 +45,11 @@ flutter:
   generate: true
   uses-material-design: true
   assets:
-    - assets/icon.png
+    - assets/icon.svg
     - assets/underdeveloped.png
     - assets/character_template.docx
 
 flutter_launcher_icons:
-  android: true
+  android: false
   ios: true
-  image_path: "assets/icon.png"
+  image_path: "assets/icon.svg"
