--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   flutter_bloc: ^8.1.3
   crypto: ^3.0.3
   package_info_plus: ^8.3.0
+  universal_html: ^2.2.1
+  share_plus: ^7.0.1
 
 dev_dependencies:
   flutter_test:
