--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   package_info_plus: ^8.3.0
   universal_html: ^2.2.1
   share_plus: ^7.0.1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
