--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -9,18 +9,14 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
-      
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.19.5'
           channel: 'stable'
-          
       - name: Install dependencies
         run: flutter pub get
-          
-      - name: Run tests
+      - name: Run tests (if needed)
         run: flutter test
