--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -9,19 +9,26 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
-      - name: Clean Flutter cache
-        run: |
-          rm -rf /opt/hostedtoolcache/flutter
-          flutter cache clean
-      - uses: actions/checkout@v4
+      
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
           flutter-version: '3.22.1'
           channel: 'stable'
+          
+      - name: Clean Flutter cache
+        run: flutter cache clean
+
+      - name: Verify versions
+        run: |
+          flutter --version
+          dart --version
+          
       - name: Install dependencies
         run: flutter pub get
-      - name: Run tests (if needed)
+          
+      - name: Run tests
         run: flutter test
