--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -15,9 +15,9 @@ jobs:
       
       # Установка Flutter
       - name: Set up Flutter
-        uses: subosito/flutter-action@v2
+        uses: flutter/setup-action@v2
         with:
-          flutter-version: '3.22.1'
+          flutter-version: '3.16.0'
           channel: 'stable'
           
       # Проверка версий
