--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   provider: ^6.0.5
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  flutter_markdown: ^0.6.15
   path_provider: ^2.1.1
   image_picker: ^1.1.2
   open_filex: ^4.7.0
