--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,13 +19,11 @@ dependencies:
   path_provider: ^2.1.1
   image_picker: ^1.1.2
   open_filex: ^4.7.0
-  docx_template: ^0.4.0
   url_launcher: ^6.1.11
   json_annotation: ^4.8.1
   google_sign_in: ^6.1.5
   googleapis: ^11.4.0
   extension_google_sign_in_as_googleapis_auth: ^2.0.3
-  qr_flutter: ^4.1.0
   mobile_scanner: ^3.1.0
   flutter_bloc: ^8.1.3
   crypto: ^3.0.3
@@ -33,6 +31,8 @@ dependencies:
   universal_html: ^2.2.1
   share_plus: ^7.0.1
   shared_preferences: ^2.5.3
+  pdf: ^3.10.0
+  printing: ^5.9.1
 
 dev_dependencies:
   flutter_test:
