--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -24,6 +24,9 @@
             <meta-data
                 android:name="com.google.android.gms.version"
                 android:value="@integer/google_play_services_version" />
+            <meta-data
+                android:name="android.webkit.MimeTypeMap"
+                android:resource="@xml/mime_types" />
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -36,7 +39,7 @@
                 <category android:name="android.intent.category.BROWSABLE"/>
                 <data android:scheme="file"/>
                 <data android:scheme="content"/>
-                <data android:mimeType="application/octet-stream"/>
+                <data android:mimeType="*/*"/>
                 <data android:host="*"/>
                 <data android:pathPattern=".*\\.character"/>
             </intent-filter>
@@ -47,7 +50,7 @@
                 <category android:name="android.intent.category.BROWSABLE"/>
                 <data android:scheme="file"/>
                 <data android:scheme="content"/>
-                <data android:mimeType="application/octet-stream"/>
+                <data android:mimeType="*/*"/>
                 <data android:host="*"/>
                 <data android:pathPattern=".*\\.race"/>
             </intent-filter>
