--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  intl: ^0.20.2
   provider: ^6.0.5
   hive: ^2.2.3
   hive_flutter: ^1.1.0
@@ -58,3 +59,10 @@ flutter_launcher_icons:
   android: false
   ios: true
   image_path: "assets/icon.svg"
+
+flutter_intl:
+  enabled: true
+  class_name: "S"
+  main_locale: "ru"
+  arb_dir: "lib/l10n"
+  output_dir: "lib/generated"
