--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,53 +1,14 @@
 name: characterbook
 description: "Implementation of the Character Book app on the Flutter framework"
-publish_to: 'MaxGog'
 version: 1.6.1+21
+publish_to: 'MaxGog'
 
 environment:
-  sdk: ^3.7.2
-
-dependencies:
-  flutter:
-    sdk: flutter
-  flutter_localizations:
-    sdk: flutter
-  cupertino_icons: ^1.0.8
-  intl: ^0.20.2
-  provider: ^6.0.5
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
-  flutter_markdown: ^0.6.15
-  path_provider: ^2.1.1
-  image_picker: ^1.1.2
-  open_filex: ^4.7.0
-  url_launcher: ^6.1.11
-  json_annotation: ^4.8.1
-  google_sign_in: ^6.1.5
-  googleapis: ^11.4.0
-  extension_google_sign_in_as_googleapis_auth: ^2.0.3
-  flutter_bloc: ^8.1.3
-  crypto: ^3.0.3
-  package_info_plus: ^8.3.0
-  universal_html: ^2.2.1
-  share_plus: ^7.0.1
-  shared_preferences: ^2.5.3
-  pdf: ^3.10.0
-  printing: ^5.9.1
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_lints: ^5.0.0
-  build_runner: ^2.4.0
-  intl_utils: ^2.8.6
-  hive_generator: ^2.0.1
-  flutter_launcher_icons: ^0.13.1
-  flutter_gen_runner: ^5.10.0
-  json_serializable: ^6.7.1
+  sdk: '>=3.7.2 <4.0.0'
 
 flutter:
-  generate: true
   uses-material-design: true
+  generate: true
   assets:
     - assets/icon.svg
     - assets/underdeveloped.png
@@ -55,10 +16,53 @@ flutter:
     - assets/fonts/NotoSans-Bold.ttf
     - assets/fonts/NotoSans-Italic.ttf
 
-flutter_launcher_icons:
-  android: false
-  ios: true
-  image_path: "assets/icon.svg"
+dependencies:
+  flutter:
+    sdk: flutter
+  flutter_localizations:
+    sdk: flutter
+  cupertino_icons: ^1.0.8
+  provider: ^6.0.5
+  flutter_bloc: ^8.1.3
+
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  shared_preferences: ^2.5.3
+
+  intl: ^0.20.2
+
+  flutter_markdown: ^0.6.15
+  pdf: ^3.10.0
+  printing: ^5.9.1
+
+  image_picker: ^1.1.2
+  open_filex: ^4.7.0
+  path_provider: ^2.1.1
+
+  url_launcher: ^6.1.11
+  google_sign_in: ^6.1.5
+  googleapis: ^11.4.0
+  extension_google_sign_in_as_googleapis_auth: ^2.0.3
+
+  crypto: ^3.0.3
+  json_annotation: ^4.8.1
+  package_info_plus: ^8.3.0
+  universal_html: ^2.2.1
+  share_plus: ^7.0.1
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+  flutter_lints: ^5.0.0
+
+  build_runner: ^2.4.0
+  json_serializable: ^6.7.1
+  hive_generator: ^2.0.1
+  flutter_gen_runner: ^5.10.0
+
+  intl_utils: ^2.8.6
+
+  flutter_launcher_icons: ^0.13.1
 
 flutter_intl:
   enabled: true
@@ -66,3 +70,8 @@ flutter_intl:
   main_locale: "ru"
   arb_dir: "lib/l10n"
   output_dir: "lib/generated"
+
+flutter_launcher_icons:
+  android: false
+  ios: true
+  image_path: "assets/icon.svg"
